--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
     left: 0;
     width: 100%;
     height: 100px;
-    background: url(Media/wavebottom.png);
+    background: url(./Media/wavebottom.png);
     background-size: 1000px 100px;
 }
 
@@ -154,7 +154,7 @@ body {
     left: 0;
     width: 100%;
     height: 100px;
-    background: url(Media/wavetop.png);
+    background: url(./Media/wavetop.png);
     background-size: 1000px 100px;
 }
 
